// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistribuerButtons Render DistribuerButtons Should render distribuer buttons 1`] = `
<div
  class="flex flex-row gap-5"
  id="distribuer_buttons"
  style="display: none;"
>
  <button
    class="navds-button navds-button--secondary navds-button--medium"
  >
    <span
      class="navds-label"
    >
      Send lokalt
    </span>
  </button>
</div>
`;

exports[`DistribuerButtons Send manuelt button Should open send manuelt modal 1`] = `
<div
  aria-label="ManuelUtsendingModal"
  aria-modal="true"
  class="ReactModal__Content modal"
  role="dialog"
  tabindex="-1"
>
  <section>
    <div
      class="p-2"
    >
      <h1
        class="navds-heading navds-heading--large"
      >
        Har du sendt brevet lokalt?
      </h1>
      <div
        class="min-w-[35rem] relative  w-full max-w-2xl h-full md:h-auto"
      >
        <div
          class="py-4"
        >
          <p
            class="navds-body-short navds-body-short--medium"
          >
            Jeg bekrefter at jeg har printet og sendt ut følgende brev:
          </p>
          <div
            class="pt-4"
          >
            <div
              class="dokument-item"
              id="doc_123213"
            >
              <p
                class="typo-normal"
              >
                Tittel (123213)
              </p>
              <div
                class="hover:cursor-pointer pl-1 pt-1 view-document-button"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M20.586 2H14V0h10v10h-2V3.414L10.707 14.707l-1.414-1.414L20.586 2zM0 5a2 2 0 012-2h8.5v2H2v17h17v-8.5h2V22a2 2 0 01-2 2H2a2 2 0 01-2-2V5z"
                    fill="#0067C5"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex items-center p-2 space-x-2 "
    >
      <button
        class="navds-button navds-button--primary navds-button--medium"
      >
        <span
          class="navds-label"
        >
          Bekreft og gå tilbake til sakshistorikk
        </span>
      </button>
      <button
        class="navds-button navds-button--tertiary navds-button--medium"
      >
        <span
          class="navds-label"
        >
          Avbryt
        </span>
      </button>
    </div>
  </section>
  <button
    aria-label="Lukk"
    class="lukknapp lukknapp--overstHjorne modal__lukkknapp--shake"
  >
    <span
      class="text-hide"
    >
      Lukk
    </span>
  </button>
</div>
`;

exports[`DistribuerButtons Start distribusjon button Should open start distribusjon modal 1`] = `
<div
  aria-label="BestillDistribusjonModal"
  aria-modal="true"
  class="ReactModal__Content ReactModal__Content--after-open modal bestill-distribusjon-modal"
  role="dialog"
  tabindex="-1"
>
  <section>
    <h1
      class="navds-heading navds-heading--large"
    >
      Skal du sende brevet sentralt/digitalt?
    </h1>
    <div
      class="min-w-[35rem] relative px-2 w-full max-w-2xl h-full md:h-auto"
    >
      <div
        class="pr-5 pl-5 pt-8 pb-8"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          Mottaker
        </h1>
        <div
          class="avsenderMottakerNotEditable"
        >
          <div
            class="person-info margin--M undefined"
          >
            <svg
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12 0C5.383 0 0 5.383 0 12C0 15.18 1.232 18.177 3.47 20.438C5.742 22.735 8.771 24 12 24C15.234 24 18.268 22.731 20.542 20.426C22.772 18.167 24 15.174 24 12C24 5.383 18.617 0 12 0ZM4.655 20.17C5.684 19.607 7.188 19.059 8.656 18.526C9.17 18.34 9.683 18.154 10.176 17.967C10.371 17.893 10.499 17.707 10.499 17.499V15C10.499 14.791 10.361 14.601 10.165 14.528C10.118 14.511 9 14.072 9 12C9 11.724 8.793 11.506 8.518 11.506C8.471 11.474 8.38 11.288 8.38 11C8.38 10.712 8.471 10.526 8.5 10.5C8.776 10.5 9 10.276 9 10C9 9.875 8.963 9.744 8.882 9.456C8.735 8.933 8.345 7.542 8.688 7.09C8.726 7.039 8.934 6.897 9.402 6.99C9.664 7.044 9.921 6.88 9.985 6.621C10.147 5.972 11.311 5.5 12.75 5.5C14.189 5.5 15.353 5.972 15.515 6.621C15.744 7.538 15.337 8.81 15.141 9.421C15.044 9.725 15 9.863 15 10C15 10.276 15.207 10.494 15.482 10.494C15.528 10.526 15.619 10.712 15.619 11C15.619 11.288 15.528 11.474 15.499 11.5C15.223 11.5 14.999 11.724 14.999 12C14.999 14.072 13.881 14.511 13.841 14.526C13.638 14.594 13.5 14.785 13.5 15V17.5C13.5 17.708 13.629 17.895 13.824 17.968C14.367 18.172 14.909 18.367 15.438 18.559C16.948 19.105 18.381 19.626 19.357 20.158C17.333 21.988 14.75 23 12 23C9.256 23 6.678 21.992 4.655 20.17ZM20.108 19.431C19.061 18.806 17.525 18.25 15.778 17.618C15.358 17.466 14.93 17.311 14.5 17.152V15.304C15.001 14.995 15.884 14.196 15.99 12.368C16.376 12.142 16.62 11.641 16.62 10.998C16.62 10.419 16.422 9.955 16.101 9.704C16.343 8.947 16.781 7.56 16.485 6.377C16.138 4.992 14.256 4.5 12.75 4.5C11.408 4.5 9.768 4.891 9.181 5.956C8.476 5.92 8.086 6.229 7.891 6.486C7.256 7.324 7.675 8.854 7.911 9.696C7.583 9.946 7.38 10.415 7.38 11C7.38 11.643 7.624 12.144 8.01 12.37C8.116 14.198 8.999 14.996 9.5 15.306V17.154C9.112 17.299 8.714 17.443 8.316 17.587C6.691 18.176 5.017 18.783 3.903 19.445C2.028 17.408 1 14.78 1 12C1 5.935 5.935 1 12 1C18.065 1 23 5.935 23 12C23 14.774 21.976 17.397 20.108 19.431Z"
                fill="#3E3832"
                fill-rule="evenodd"
              />
            </svg>
            <div>
              <strong>
                Nikkel Hansen
              </strong>
            </div>
            <div>
              / 
              313213123
            </div>
            <div
              class="copy-button"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M14 2v6h6v10H8V2h6zm8 18V6l-6-6H6v4H2v20h16v-4h4zm-6 0v2H4V6h2v14h10zm3.172-14L16 2.828V6h3.172z"
                  fill="#0067C5"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
        <div>
          <h1
            class="pb-1 navds-heading navds-heading--small"
          >
            Adresse
          </h1>
          <div
            class="flex w-full"
          >
            <div
              class="pt-2"
            >
              <p
                class="navds-body-short navds-body-short--medium"
              >
                Pepperkakegata 15A
              </p>
              <p
                class="navds-body-short navds-body-short--medium"
              >
                3000 Kardemommeby
              </p>
              <p
                class="navds-body-short navds-body-short--medium"
              >
                Norge
              </p>
            </div>
            <div
              class="pl-1"
            >
              <button
                class="navds-button navds-button--tertiary navds-button--small"
                id="endre_adresse_knapp"
              >
                <span
                  class="navds-button__icon"
                >
                  <svg
                    fill="none"
                    focusable="false"
                    fr="true"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M22.835 1.165a3.976 3.976 0 0 1 0 5.623L8.073 21.549.682 24 0 23.318l2.45-7.392L17.21 1.165a3.977 3.977 0 0 1 5.624 0Zm-4.218 7.029-2.811-2.812L4.188 17l-1.393 4.205 4.207-1.395L18.618 8.194ZM21.43 2.57a1.989 1.989 0 0 0-2.703-.1l-.108.1-1.406 1.406 2.811 2.812 1.406-1.406a1.988 1.988 0 0 0 .101-2.703l-.1-.109Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="navds-label navds-label--small"
                >
                  Endre
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center p-2 space-x-2"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
        >
          <span
            class="navds-label"
          >
            Bekreft og gå tilbake til sakshistorikk
          </span>
        </button>
        <button
          class="navds-button navds-button--secondary navds-button--medium"
        >
          <span
            class="navds-label"
          >
            Avbryt
          </span>
        </button>
      </div>
    </div>
  </section>
  <button
    aria-label="Lukk"
    class="lukknapp lukknapp--overstHjorne"
  >
    <span
      class="text-hide"
    >
      Lukk
    </span>
  </button>
</div>
`;
